# optify

./: .editorconfig  .gitattributes  .gitignore  README.md
elixir/optify/: .gitignore  .tool-versions  Cargo.toml  LICENSE.txt  README.md  mix.exs
elixir/optify/lib/: optify.ex
elixir/optify/lib/optify/: get_options_preferences.ex  native.ex  options_provider.ex  options_provider_builder.ex  options_watcher.ex  options_watcher_builder.ex
elixir/optify/native/optify_nif/: Cargo.toml
elixir/optify/native/optify_nif/src/: lib.rs  preferences.rs  provider.rs  provider_builder.rs  watcher.rs  watcher_builder.rs
elixir/optify/test/: get_options_preferences_test.exs  options_provider_builder_test.exs  options_provider_test.exs  options_watcher_builder_test.exs  options_watcher_test.exs  shared_suites_test.exs  test_helper.exs
js/optify-config/: .npmignore  .oxlintrc.json  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
js/optify-config/.cargo/: config.toml
js/optify-config/__test__/: index.test.ts
js/optify-config/benchmarks/: get_all_options.mjs
js/optify-config/npm/darwin-arm64/: README.md  package.json
js/optify-config/npm/darwin-universal/: README.md  package.json
js/optify-config/npm/darwin-x64/: README.md  package.json
js/optify-config/npm/freebsd-x64/: README.md  package.json
js/optify-config/npm/linux-arm64-gnu/: README.md  package.json
js/optify-config/npm/linux-arm64-musl/: README.md  package.json
js/optify-config/npm/linux-x64-gnu/: README.md  package.json
js/optify-config/npm/win32-x64-msvc/: README.md  package.json
js/optify-config/src/: builder_options.rs  cache-init-options.ts  cache-options.ts  caching.ts  convert.rs  index.ts  lib.rs  metadata.rs  preferences.rs  provider.rs  types.ts  watcher.rs  watcher_options.rs
js/optify-config/tests/: cache.test.ts  optify.test.ts  provider.test.ts  watcher.test.ts
python/optify/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/optify/optify/: optify.pyi
python/optify/src/: lib.rs  preferences.rs  provider.rs  watcher.rs
python/optify/tests/: test_dacite.py  test_optify.py  test_provider.py  test_pydantic.py
ruby/optify/: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  README.md  Rakefile  optify.gemspec
ruby/optify/benchmarks/: build.rb  get_canonical_feature_names.rb  get_options.rb  load.rb  run.sh
ruby/optify/ext/optify_ruby/: Cargo.toml  extconf.rb
ruby/optify/ext/optify_ruby/.cargo/: config.toml
ruby/optify/ext/optify_ruby/src/: lib.rs  preferences.rs
ruby/optify/lib/: optify.rb
ruby/optify/lib/optify_ruby/: base_config.rb  bindings.rb  cache_init_options.rb  from_hashable.rb  get_options_preferences.rb  implementation.rb  optify.rb  options_metadata.rb  provider_module.rb  watcher_implementation.rb
ruby/optify/rbi/: optify.rbi
ruby/optify/sig/: optify.rbs
ruby/optify/sorbet/: config
ruby/optify/sorbet/rbi/: todo.rbi
ruby/optify/sorbet/rbi/gems/: optify-from_hash@0.0.1.rbi  optify-from_hash@0.1.0.rbi  optify-from_hash@0.3.0.rbi  optify-from_hash@0.3.1.rbi  prism@1.9.0.rbi  rb_sys@0.9.114.rbi  rbi@0.2.4.rbi  rbi@0.3.11.rbi  rbs@4.0.3.rbi  require-hooks@0.4.0.rbi  rexml@3.4.4.rbi  rubocop-ast@1.45.1.rbi  rubocop-ast@1.49.1.rbi  rubocop@1.82.1.rbi  sin_lru_redux@2.5.2.rbi  spoom@1.5.3.rbi  spoom@1.7.13.rbi  tapioca@0.16.8.rbi  tapioca@0.17.2.rbi  test-unit@3.6.7.rbi  test-unit@3.6.8.rbi  test-unit@3.6.9.rbi  yard@0.9.43.rbi
ruby/optify/test/: .rubocop.yml  README.md  additional_features_test.rb  base_config_test.rb  builder_error_test.rb  cache_modes_test.rb  conditions_config.rb  configurable_string_test.rb  from_hash_test.rb  hash_utils.rb  manual_test.rb  metadata_test.rb  my_config.rb  optify_bindings_test.rb  optify_test.rb  provider_cache_test.rb  schema_validation_test.rb  watcher_test.rb
rust/optify/: Cargo.toml  README.md  build.rs
rust/optify-cli/: Cargo.toml  README.md
rust/optify-cli/src/: main.rs
rust/optify-cli/tests/: test_cli.sh
rust/optify/.claude/: settings.json
rust/optify/benches/: caching_benchmark.rs  get_all_options_benchmark.rs  get_options_benchmark.rs  loading_benchmark.rs
rust/optify/examples/: liquid_test.rs
rust/optify/src/: builder.rs  builder_trait.rs  lib.rs  liquid_experiment.rs  provider.rs  provider_trait.rs
rust/optify/src/builder/: builder_impl.rs  builder_options.rs  builder_trait.rs  extract_configurable_string_files_from_config.rs  extract_files_from_config.rs  get_canonical_feature_name.rs  get_supported_extensions.rs  loading_result.rs  mod.rs  watchable_builder.rs  watcher_builder.rs
rust/optify/src/configurable_string/: configurable_string_impl.rs  locator.rs  mod.rs
rust/optify/src/configurable_values/: configurable_list_impl.rs  locator.rs  mod.rs
rust/optify/src/json/: escape_json_pointer.rs  merge.rs  mod.rs  reader.rs
rust/optify/src/provider/: constraints.rs  get_options_preferences.rs  mod.rs  provider_impl.rs  provider_trait.rs  watcher.rs
rust/optify/src/schema/: conditions.rs  feature.rs  metadata.rs  mod.rs
rust/optify/tests/: test_builder.rs  test_cache.rs  test_configurable_string.rs  test_constraints.rs  test_get_possible_keys.rs  test_provider.rs  test_schema_validation.rs  test_suites.rs  test_watchable_builder.rs
rust/optify/tests/circular_imports/: a.yaml  b.yml
rust/optify/tests/configurable_string_cs_only/: arguments.yaml
rust/optify/tests/configurable_string_no_config/: feature_with_cs.json  simple.txt
rust/optify/tests/configurable_string_resources/: config.json  template.liquid
rust/optify/tests/cycle_in_imports/: a.yaml  b.yaml  c.yaml  start.yaml
rust/optify/tests/duplicate_alias/: a.yaml  b.yml
rust/optify/tests/invalid_file/: invalid.yaml
rust/optify/tests/used_canonical_name/: a.yaml
rust/optify_ruby/: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  optify.gemspec
rust/optify_ruby/ext/optify/: Cargo.toml  extconf.rb
rust/optify_ruby/ext/optify_ruby/: extconf.rb
rust/optify_ruby/lib/: optify.rb
rust/optify_ruby/lib/optify_ruby/: optify_ruby.bundle
rust/optify_ruby/test/: optify_test.rb
(+278 files in other folders)
