[package]
name = "optify_js"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
# serde-json is needed for serde_json::Value support
napi = { version = "3.7.0", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "3.4.0"
optify = { path = "../../rust/optify", version = "0.20.5" }
serde_json = "1.0.140"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
