[package]
name = "optify-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "optify"
crate-type = ["cdylib"]

[dependencies]
optify = { path = "../../rust/optify", version = "0.4.0" }
pyo3 = "0.23.3"