[build-system]
# For Python bindings:
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[package]
name = "optify"
version = "0.1.0"

[project]
name = "optify"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[license]
name = "MIT"

[project.optional-dependencies]
dev = ["pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
