[project]
name = "optify"
authors = [
    { name="Justin D. Harris" }
]
description = "Simplifies getting the right configuration options for a process using pre-loaded configurations from files to manage options for experiments or flights."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/juharris/optify"
Issues = "https://github.com/juharris/optify/issues"

[build-system]
# For Python bindings:
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[package]
name = "optify"
version = "0.8.6"

[tool.poetry]
name = "optify"
version = "0.8.6"
description = "Simplifies getting the right configuration options for a process using pre-loaded configurations from files to manage options for experiments or flights."
authors = ["Justin D. Harris"]
maintainers = ["Justin D. Harris"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[license]
name = "MIT"

[tool.poetry.dependencies]
maturin = "^1.12.6"
python = "^3.11"

[tool.poetry.dev-dependencies]
dacite = "^1.9.2"
pydantic = "^2.12.5"
pytest = "^8.3.4"

[project.optional-dependencies]
dev = [
    "dacite>=1.9.2",
    "pydantic>=2.12.5",
    "pytest>=8.3.4,<9",
]

[tool.maturin]
features = ["pyo3/extension-module"]
