# Required when cross-compiling to help CI find the correct Cargo.toml.
[workspace]
members = ["ext/optify_ruby"]
resolver = "2"

# Use the local optify crate for development and CI.
# When building from the source gem (no workspace), Cargo fetches from crates.io instead.
[patch.crates-io]
optify = { path = "../../rust/optify" }
