[package]
name = "optify-cli"
version = "1.1.0"
edition = "2021"

description = "CLI for inspecting and querying Optify configuration options."
homepage = "https://github.com/juharris/optify/tree/main/rust/optify-cli"
license = "MIT"
readme = "README.md"
repository = "https://github.com/juharris/optify/tree/main/rust/optify-cli"

categories = ["command-line-utilities", "config"]
keywords = ["cli", "configuration", "options"]

[[bin]]
name = "optify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
optify = { path = "../optify", version = "1.3.0" }
serde_json = "1.0.149"
