[package]
name = "optify"
version = "0.16.0"
edition = "2021"
build = "build.rs"

description = "Simplifies getting the right configuration options for a process using pre-loaded configurations from files (JSON, YAML, etc.) to manage options for experiments or flights. This library is mainly made to support building implementations for other languages such as Node.js, Python, and Ruby. It is not meant to be consumed directly yet."
homepage = "https://github.com/juharris/optify/tree/main/rust/optify"
license = "MIT"
readme = "README.md"
repository = "https://github.com/juharris/optify/tree/main/rust/optify"

categories = ["config"]
keywords = ["configuration", "options"]

exclude = [
    "tests/*",
]

[dependencies]
config = "0.15.6"
dunce = "1.0.5"
jsonschema = { version = "0.32.1" }
notify = "8.0.0"
# For fetching JSON schema files from the web.
reqwest = { version = "*", features = ["rustls-tls"] }
notify-debouncer-full = "0.5.0"
# For fetching JSON schema files from the web, but requires Perl.
# openssl-sys = { version = "*", features = ["vendored"] }
rayon = "1.10.0"
regex = "1.11.1"
serde =  { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
unicase = "2.8.1"
walkdir = "2.5.0"

[dev-dependencies]
regex = "1.11.1"
criterion = "0.5.1"
tempfile = "3"

[[bench]]
name = "loading_benchmark"
harness = false
