[package]
name = "optify_nif"
version = "0.2.0"
edition = "2021"

[lib]
name = "optify_nif"
crate-type = ["cdylib"]

[dependencies]
# Can't put a relative path here because then others can't install the hex package.
# The workspace Cargo.toml patches this to the local crate during development.
optify = "1.3.0"
rustler = { version = "0.37.4", features = ["serde"] }
serde_json = "1.0.149"
